# nt

./: .gitignore  CMakeLists.txt  solution.bat
src/: main.cc  sys.asm  sys.h
src/sys/: file.cc  file.h  init.cc  init.h  memory.cc  memory.h  string.cc  string.h
